# robominer

./: README.md
robominer/: CMakeLists.txt  package.xml
robominer_follow/: CMakeLists.txt  package.xml
robominer_gazebo/: CMakeLists.txt  package.xml
robominer_gazebo/env-hooks/: robominer_gazebo.sh.in
robominer_gazebo/launch/: robominer.launch.py
robominer_gazebo/worlds/: robominer_empty.world
robominer_ignition/: CMakeLists.txt  package.xml
robominer_ignition/env-hooks/: robominer_ignition.sh.in
robominer_ignition/ign/: gui.config
robominer_ignition/launch/: robominer.launch.py
robominer_ignition/models/robominer_ignition/: model.config  model.sdf
robominer_ignition/rviz/: robominer_ignition.rviz
robominer_ignition/worlds/: model.config
ros_ign/ros_ign/: package.xml
