<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robominer_ignition</name>
  <version>0.3.0</version>
  <description>
    Launch Ignition simulation with Robominer robot.
  </description>
  <maintainer email="iranzulezaun@gmail.com">Iranzu Lezaun</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_ign_gazebo</depend>

  <exec_depend>robominer_follow</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

